<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">


    <LinearLayout
        style="@style/layout_vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            style="@style/layout_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_voltar"
                style="@style/btn_voltar"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5" />

            <TextView
                style="@style/fonte_padrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/cadastro"></TextView>
        </LinearLayout>

        <LinearLayout
            style="@style/layout_vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_libert" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/nome"></ImageView>

            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:hint="@string/nome"
                android:inputType="text"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/genero">
            </ImageView>

            <EditText
                android:id="@+id/etGenero"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:hint="@string/genero"
                android:inputType="text"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/calendar">
            </ImageView>

            <EditText
                android:id="@+id/etData"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:hint="@string/data"
                android:inputType="text"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:src="@drawable/email"></ImageView>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:inputType="text"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/password"></ImageView>

            <EditText
                android:id="@+id/etSenha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:hint="@string/senha"
                android:inputType="textPassword"></EditText>
        </LinearLayout>

        <LinearLayout style="@style/layout_vertical">

            <Button
                android:id="@+id/btCadastro"
                style="@style/btn"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_reg"
                android:text="@string/cadastrar">
            </Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/fonte_padrao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/ja_cadastrado"
                    android:textSize="22sp">

                </TextView>

                <TextView
                    android:id="@+id/txt_login"
                    style="@style/fonte_padrao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/faca_login"
                    android:textAlignment="gravity"
                    android:textColor="@color/red_3"
                    android:textSize="22sp">
                </TextView>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>