<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout style="@style/layout_vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            style="@style/layout_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_voltar2"
                style="@style/btn_voltar"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5" />

            <TextView
                style="@style/fonte_padrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/login"></TextView>
        </LinearLayout>

        <LinearLayout

            style="@style/layout_vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:src="@drawable/logo_libert" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/nome"></ImageView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:hint="@string/nome"
                android:inputType="number"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/password"></ImageView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/senha"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5">
            </CheckBox>

            <TextView
                style="@style/fonte_padrao"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="@string/lembrar_me"
                android:textAlignment="gravity"
                android:textSize="20sp">

            </TextView>
        </LinearLayout>

        <LinearLayout style="@style/layout_vertical">

            <Button
                android:id="@+id/bt_cadastro"
                style="@style/btn"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_reg"
                android:text="@string/logar"

                ></Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    style="@style/fonte_padrao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/nao_cadastrado"
                    android:textSize="22sp">

                </TextView>

                <TextView
                    android:id="@+id/txt_cadastro"
                    style="@style/fonte_padrao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/cadastre_se"
                    android:textAlignment="gravity"
                    android:textColor="@color/red_3"
                    android:textSize="22sp">
                </TextView>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>