<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/layout_vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/red_2">

            <ImageView
                android:layout_width="1dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:src="@drawable/perfil" />

            <TextView
                style="@style/fonte_padrao"
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:text="@string/bv_perfil"
                android:textAlignment="gravity"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="30dp"
            android:background="@color/white">


        </LinearLayout>

        <LinearLayout style="@style/layout_vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/poppins_reg"
                    android:text="@string/intro"
                    android:textColor="@color/black"
                    android:textSize="17sp"></TextView>

            </LinearLayout>


            <TextView
                style="@style/fonte_padrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Principais Pratos"
                android:textSize="20sp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Sushi"
                    android:textAlignment="center"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Lagostim"
                    android:textAlignment="center"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imPrato1"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sushi"></ImageView>

                <ImageView
                    android:id="@+id/imPrato2"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@drawable/lagostim"></ImageView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@color/red_2">

            <ImageView
                android:id="@+id/bt_home"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/home" />

            <ImageView
                android:id="@+id/bt_rest"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/restautante" />

            <ImageView
                android:id="@+id/bt_perfil"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/perfil" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_2">

            <TextView
                style="@style/fonte_padrao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foot_inicio"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                style="@style/fonte_padrao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foot_rest"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                style="@style/fonte_padrao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foot_perfil"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>